Reservation page designed - working end-to-end

--- a/src/styles/CommonStyles.css
+++ b/src/styles/CommonStyles.css
@@ -1,6 +1,7 @@
 .wrapper {
-    width: 858px;
+    width: 878px;
     margin: auto;
+    padding: 0 10px;
 }
 
 ul {
@@ -20,4 +21,10 @@ button {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+button:hover {
+    /* font-size: 19px; */
+    border: 3px solid #333333;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.60);
 }
