--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border: 3px solid black;
 }
 
 .about-left {
@@ -85,3 +86,4 @@
     right: 0;
     z-index: 1; /* Ensure image-B appears above image-A */
 }
+
