--- a/src/styles/BookingForm.css
+++ b/src/styles/BookingForm.css
@@ -18,9 +18,20 @@ form {
     border-radius: 5px;
     border: 1px solid #ccc;
   }
+
+  /* Style for invalid input */
+input[aria-invalid="true"] {
+  border-color: crimson;
+}
+
+/* Style for valid input */
+input[aria-invalid="false"] {
+  border-color: green;
+}
   
   input[type="submit"] {
     font-family: Karla;
+    font-size: 16px;
     background-color: #f4ce14;
     color: #333;
     font-weight: bold;
@@ -31,7 +42,21 @@ form {
   }
   
   input[type="submit"]:hover {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.60);
     background-color: #333;
     color: #f4ce14;
+  }
+
+  input[type="submit"]:disabled {
+    color: #999;
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    cursor: not-allowed;
+}
+
+  .error-message {
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: crimson;
   }
   
