--- a/src/styles/CommonStyles.css
+++ b/src/styles/CommonStyles.css
@@ -1,5 +1,5 @@
 .wrapper {
-    width: 878px;
+    width: 70%;
     margin: auto;
     padding: 0 10px;
 }
@@ -8,9 +8,16 @@ ul {
     list-style: none;
 }
 
+sup {
+    color: red;
+    font-family: Karla;
+}
+
 button {
-    width: 200px;
-    height: 60px;
+    width: 10rem;
+    height: 8rem;
+    max-width: 200px;
+    max-height: 60px;
     border-radius: 20px;
     border: none;
     background-color: #F4CE14;
@@ -21,10 +28,12 @@ button {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    cursor: pointer;
 }
 
 button:hover {
     /* font-size: 19px; */
-    border: 3px solid #333333;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.60);
+    background-color: #333333;
+    color: #F4CE14;
 }
