--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,29 +1,38 @@
 .hero {
-    height: 377px;
+    height: 90%;
+    max-height: 377px;
     background-color: #495E57;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 116px;
+    align-items: center;
+    margin-bottom: 3rem;
+    width: 100%;
 }
 
 .hero-content {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
+    max-width: 900px;
+    height: 90%;
 }
 
 .hero-left {
-    width: 399px;
-    height: 306px;
+    width: 40%;
+    max-width: 399px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-self: center;
+    gap: 2.5rem;
+    padding: 1rem 0;
 }
 
 .header-info > h1 {
     font-family: "Markazi Text";
-    font-size: 64px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -32,18 +41,19 @@
 
 .header-info > h2 {
     font-family: "Markazi Text";
-    font-size: 40px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     color: #EDEFEE;
+    margin-bottom: 1.5rem;
 }
 
 .header-info > p {
-    width: 262px;
-    height: 79px;
+    /* width: 262px;
+    height: 79px; */
     font-family: Karla;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -51,9 +61,9 @@
 }
 
 .hero-right {
-    width: 375px;
-    height: 396px;
-    margin-top: 69px;
+    width: 40%;
+    max-width: 375px;
+    margin-top: 4rem;
     overflow: hidden;
     border-radius: 20px;
 }
@@ -61,4 +71,22 @@
 .hero-right > img {
     width: 375px;
     margin: -110px 0;
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        background-image: url("../assets/images/restauranfood.jpg");
+        background-position: center;
+        background-size: 100% auto;
+    }
+
+    .hero-right {
+        display: none;
+    }
+
+    .hero-left {
+        width: 100%;
+        padding: 1rem;
+        background-color: rgba(51, 51, 51, 0.7);
+    }
 }
