--- a/src/styles/Highlights.css
+++ b/src/styles/Highlights.css
@@ -1,17 +1,26 @@
 .highlights {
-    margin-bottom: 76px;
+    /* margin-bottom: 4.8rem; */
+    width: 100%;
+    max-width: 900px;
+    display: flex;
+    justify-content: center;
+}
+
+.highlights-content {
+    width: 100%;
+    padding: 2rem 0;
 }
 
 .highlights-header {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
 }
 
 .highlights-header > h1 {
     /* Title */
     font-family: "Markazi Text";
-    font-size: 64px;
+    font-size: 3rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -21,4 +30,7 @@
 .highlights-menu {
     display: flex;
     justify-content: space-between;
+    gap: 2rem;
+    overflow: scroll;
+    overflow-y: hidden;
 }
