--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,6 +1,6 @@
 .navbar {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     background-color: #EDEFEE;
     color: #333333;
     font-family: Karla;
@@ -22,17 +22,75 @@
     height: 43px;
 }
 
-.navbar-content > ul {
+.nav-links {
     display: flex;
-    width: 558px;
-    align-items: flex-start;
+    width: 70%;
+    max-width: 560px;
+    align-items: center;
     justify-content: space-between;
 }
 
-.navbar-content li:hover {
+.hamburger-container {
+    display: none;
+}
+
+.nav-links li {
+    padding-bottom: 0.5rem;
+}
+
+.nav-links li:hover {
     border-bottom: 2px solid #333333;
+    cursor: pointer;
 }
 
 .active {
     border-bottom: 2px solid #333333;
+}
+
+.overlay {
+    position: absolute;
+    top: calc(3.5rem); /* Position below the navbar */
+    left: 60%; /* Center horizontally */
+    transform: translateX(-50%); /* Center horizontally */
+    width: 60%; /* Adjust width as needed */
+    max-width: 350px; /* Adjust max-width as needed */
+    background-color: #EDEFEE;
+    z-index: 10;
+    border-radius: 0.7rem;
+}
+
+.overlay-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 1rem;
+    width: 100%;
+    height: 80%;
+    margin-bottom: 1rem;
+}
+
+.overlay-menu li {
+    width: 100%;
+    padding: 0.7rem 2rem;
+}
+
+.overlay-menu li:hover {
+    cursor: pointer;
+    background-color: #F4CE14;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .nav-links {
+        display: none;
+    }
+
+    .hamburger-container {
+        display: block;
+    }
+
+    .hamburger-container :hover {
+        cursor: pointer;
+    }
 }
