--- a/src/styles/ReviewCard.css
+++ b/src/styles/ReviewCard.css
@@ -1,6 +1,8 @@
 .review-card {
-    width: 186px;
-    height: 178px;
+    width: 15rem;
+    height: 10rem;
+    min-width: 220px;
+    min-height: 250px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -9,6 +11,7 @@
     border-radius: 16px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10);
+    /* border: 3px solid red; */
 }
 
 .review-card-profile {
@@ -16,6 +19,8 @@
     /* justify-content: space-between; */
     gap: 5px;
     align-items: center;
+    /* border: 3px solid black; */
+
 }
 
 .review-card-image {
@@ -23,19 +28,26 @@
     height: 32px;
     border-radius: 32px;
     overflow: hidden;
+    /* border: 3px solid green; */
+
 }
 
 .review-card-image > img {
     width: 38px;
     margin-left: -5px;
+    /* border: 3px solid blue; */
+
 }
 
 .review-card-name {
     display: flex;
     flex-direction: column;
+    /* border: 3px solid yellow; */
+
 }
 
 .review-card-name b {
+    /* border: 3px solid orange; */
     color: #333333;
 }
 
@@ -46,6 +58,8 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    /* border: 3px solid purple; */
+
 }
 
 .review-card-review {
@@ -55,4 +69,6 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    /* border: 3px solid aqua; */
+
 }
