--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -9,6 +9,8 @@
     font-weight: 700;
     line-height: normal;
     width: 100%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10);
+    margin-bottom: calc(0.5rem);
 }
 
 .navbar-content {
