--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,29 +1,40 @@
 .about {
-    height: 574px;
+    /* height: 80%; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* border: 3px solid red; */
 }
 
 .about-container {
+    width: 90%;
+    max-width: 900px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 3px solid black;
+    /* border: 3px solid black; */
+    margin-bottom: 2rem;
 }
 
 .about-left {
-    width: 370px;
-    height: 424px;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 2rem;
+    padding: 0.8rem 0;
+    /* height: 100%; */
+    /* border: 3px solid blue; */
+}
+
+.mobile-only {
+    display: none;
 }
 
 .about-title h1 {
     font-family: "Markazi Text";
-    font-size: 64px;
+    font-size: 3.5rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -32,7 +43,7 @@
 
 .about-title h2 {
     font-family: "Markazi Text";
-    font-size: 40px;
+    font-size: 2rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -41,18 +52,21 @@
 
 .about-details {
     font-family: Karla;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
     color: #333333;
+    text-align: justify;
+    /* margin-top: 1rem; */
 }
 
 .about-right {
-    width: 450px;
+    width: 60%;
     height: 400px;
     position: relative;
     align-self: center;
+    /* border: 3px solid green; */
 }
 
 .about-right img {
@@ -87,3 +101,19 @@
     z-index: 1; /* Ensure image-B appears above image-A */
 }
 
+@media screen and (max-width: 768px) {
+    .about-right {
+        display: none;
+    }
+
+    .mobile-only {
+        display: block;
+        border-radius: 0.6rem;
+        margin: 0.5rem 0 1.5rem 0;
+    }
+
+    .about-left {
+        width: 100%;
+        padding: 0;
+    }
+}
