--- a/src/styles/BookingForm.css
+++ b/src/styles/BookingForm.css
@@ -1,8 +1,8 @@
 /* BookingForm.css */
 form {
-    display: grid;
-    max-width: 500px;
-    gap: 20px;
+    display: flex;
+    width: 100%;
+    gap: 1.2rem;
     margin-bottom: 2.5rem;
     font-family: Karla;
   }
