--- a/src/styles/CommonStyles.css
+++ b/src/styles/CommonStyles.css
@@ -2,6 +2,7 @@
     width: 90%;
     margin: auto;
     padding: 0 10px;
+    /* border: 3px solid red; */
 }
 
 ul {
@@ -36,4 +37,16 @@ button:hover {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.60);
     background-color: #333333;
     color: #F4CE14;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link {
+    text-decoration: none !important;
+}
+
+a:hover {
+    cursor: pointer;
 }
