--- a/src/styles/MenuCard.css
+++ b/src/styles/MenuCard.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 264.667px;
+    width: 265px;
     height: 439px;
 }
 
 .menu-card-content {
     flex-grow: 1;
-    padding: 23px;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -25,7 +25,7 @@
     white-space: nowrap;
     /* Card_Title */
     font-family: Karla;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -37,7 +37,7 @@
 
     /* Highlight_Text_Regular */
     font-family: Karla;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -46,7 +46,7 @@
 .menu-card-dish-details {
     color: #495E57;
     font-family: Karla;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -54,7 +54,7 @@
 
 .menu-card-order {
     font-family: Karla;
-    font-size: 16px;
+    font-size: 1rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -64,11 +64,11 @@
 .menu-card-image {
     width: 264.667px;
     height: 185.258px;
-    border-radius: 16px 16px 0px 0px;
+    border-radius: 1rem 1rem 0px 0px;
     overflow: hidden;
 }
 
 .menu-card-image > img {
-    width: 264.667px;
-    height: 185.258px;
+    width: 100%;
+    height: 185px;
 }
