--- a/src/styles/Reservation.css
+++ b/src/styles/Reservation.css
@@ -1,12 +1,31 @@
 .reservation-container {
     display: flex;
     flex-direction: column;
+    width: 60%;
+    max-width: 900px;
     gap: 20px;
     font-family: Karla;
     color: #333333;
+    background-color: #FDF4EE;
+    border-radius: 0.6rem;
+    padding: 2rem;
+    /* border: 3px solid red; */
 }
 
 .reservation-header > h1 {
     font-family: "Markazi Text";
     font-size: 3rem;
+    color: #495E57;
+}
+
+.reservation-image > img {
+    width: 100%;
+    border-radius: 0.6rem;
+}
+
+@media screen and (max-width:768px) {
+    .reservation-container {
+        width: 90%;
+        padding: 1rem;
+    }
 }
