--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -61,28 +61,6 @@
     border-radius: 0.7rem;
 }
 
-.overlay-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 1rem;
-    width: 100%;
-    height: 80%;
-    margin-bottom: 1rem;
-}
-
-.overlay-menu li {
-    width: 100%;
-    padding: 0.7rem 2rem;
-}
-
-.overlay-menu li:hover {
-    cursor: pointer;
-    background-color: #F4CE14;
-    border-radius: 10px;
-}
-
 @media screen and (max-width: 768px) {
     .nav-links {
         display: none;
@@ -94,5 +72,28 @@
 
     .hamburger-container :hover {
         cursor: pointer;
+    }
+
+    .overlay-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        /* align-items: center; */
+        padding-top: 1rem;
+        width: 100%;
+        height: 80%;
+        margin-bottom: 1rem;
+    }
+    
+    .overlay-menu li {
+        width: 100%;
+        padding: 0.7rem 2rem;
+    }
+    
+    .overlay-menu li:hover, 
+    .overlay-menu li:focus {
+        cursor: pointer;
+        background-color: #F4CE14;
+        border-radius: 10px;
     }
 }
