Minor bug fixes

--- a/src/styles/Reservation.css
+++ b/src/styles/Reservation.css
@@ -9,6 +9,7 @@
     background-color: #FDF4EE;
     border-radius: 0.6rem;
     padding: 2rem;
+    margin-bottom: 2rem;
     /* border: 3px solid red; */
 }
 
