--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,7 +2,7 @@
     background-color: #D9D9D9;
     padding: 1.2rem;
     width: 100%;
-    margin-top: 2rem;
+    margin-top: auto;
     bottom: 0;
 }
 
