--- a/src/styles/Testimonials.css
+++ b/src/styles/Testimonials.css
@@ -34,3 +34,9 @@
     overflow: scroll;
     overflow-y: hidden;
 }
+
+@media screen and (max-width: 768px) {
+    .reviews {
+        padding: 0 0.7rem;
+    }
+}
