--- a/src/styles/MenuCard.css
+++ b/src/styles/MenuCard.css
@@ -4,7 +4,9 @@
     justify-content: space-between;
     width: 265px;
     height: 439px;
-    margin: 0 0.7rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
 }
 
 .menu-card-content {
