--- a/src/styles/ReviewCard.css
+++ b/src/styles/ReviewCard.css
@@ -9,8 +9,8 @@
     /* justify-content: space-between; */
     gap: 15px;
     border-radius: 1rem;
-    background-color: #EDEFEE;
-    margin: 0 0.7rem;
+    background: #FFF;
+    margin-bottom: 1rem;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10);
     /* border: 3px solid red; */
 }
