--- a/src/styles/ConfirmedBooking.css
+++ b/src/styles/ConfirmedBooking.css
@@ -6,6 +6,7 @@
     max-width: 900px;
     background-color: #FDF4EE;
     border-radius: 0.6rem;
+    margin-bottom: 1.5rem;
     /* border: 3px solid red; */
 }
 
@@ -25,22 +26,36 @@
     margin-bottom: 2rem;
 }
 
-/* .button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
+.booking-details {
+    margin-top: 1.5rem;
 }
 
-.button:hover {
-    background-color: #45a049;
-} */
+.booking-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 1.5rem;
+}
+
+.booking-table th,
+.booking-table td {
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: left;
+}
+
+.booking-table th {
+    background-color: #495E57;
+    color: #fff;
+}
+
+.booking-table td {
+    background-color: #EDEFEE;
+}
+
 
 @media screen and (max-width: 768px) {
     .confirmed-section {
         width: 90%;
+        margin-bottom: auto;
     }
 }
