--- a/src/styles/ConfirmedBooking.css
+++ b/src/styles/ConfirmedBooking.css
@@ -38,6 +38,7 @@
 
 .booking-table th,
 .booking-table td {
+    width: 50%;
     padding: 10px;
     border-bottom: 1px solid #ccc;
     text-align: left;
