--- a/src/styles/Highlights.css
+++ b/src/styles/Highlights.css
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
+    padding: 0 1rem;
     overflow: scroll;
     overflow-y: hidden;
 }
